--- a/Book Management/SuaTacGia.xaml
+++ b/Book Management/SuaTacGia.xaml
@@ -5,83 +5,142 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Book_Management"
         mc:Ignorable="d"
-        Background="#FFAEEFB2"
-        Title="Sửa Tác Giả" Height="453" Width="550" WindowStartupLocation="CenterScreen">
+        Background="#8EC5FC"
+        Title="Sửa Tác Giả" Height="550" Width="750" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Label Content="Mã tác giả:" HorizontalAlignment="Left" Height="25" Margin="10,185,0,0" VerticalAlignment="Top" Width="83" FontFamily="Times New Roman" FontSize="14"/>
-        <TextBox x:Name="txtMaTacGia" HorizontalAlignment="Left" Height="25" Margin="108,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="418"/>
-        <Label Content="Tên tác giả:" HorizontalAlignment="Left" Height="25" Margin="10,224,0,0" VerticalAlignment="Top" Width="83" FontFamily="Times New Roman" FontSize="14"/>
-        <TextBox x:Name="txtTenTacGia" HorizontalAlignment="Left" Height="25" Margin="108,224,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="418"/>
-        <Label Content="Quê quán:" HorizontalAlignment="Left" Height="25" Margin="10,263,0,0" VerticalAlignment="Top" Width="83" FontFamily="Times New Roman" FontSize="14"/>
-        <TextBox x:Name="txtQueQuan" HorizontalAlignment="Left" Height="25" Margin="108,263,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="308"/>
-        <CheckBox x:Name="chkQueQuan" Content="Chưa rõ" HorizontalAlignment="Left" Height="25" Margin="441,263,0,0" VerticalAlignment="Top" Width="85" FontFamily="Times New Roman" FontSize="14" Checked="chkQueQuan_Checked" Unchecked="chkQueQuan_Unchecked"/>
-        <Label Content="Ngày sinh:" HorizontalAlignment="Left" Height="25" Margin="9,303,0,0" VerticalAlignment="Top" Width="85" FontFamily="Times New Roman" FontSize="14"/>
-        <DatePicker x:Name="DatePickerNgaySinh" HorizontalAlignment="Left" Height="25" Margin="108,303,0,0" VerticalAlignment="Top" Width="308" FontFamily="Times New Roman" FontSize="14"/>
-        <CheckBox x:Name="chkNgaySinh" Content="Chưa rõ" HorizontalAlignment="Left" Height="25" Margin="441,303,0,0" VerticalAlignment="Top" Width="85" FontFamily="Times New Roman" FontSize="14" Checked="chkNgaySinh_Checked" Unchecked="chkNgaySinh_Unchecked"/>
-        <Label Content="Ngày mất:" HorizontalAlignment="Left" Height="25" Margin="9,342,0,0" VerticalAlignment="Top" Width="85" FontFamily="Times New Roman" FontSize="14"/>
-        <DatePicker x:Name="DatePickerNgayMat" HorizontalAlignment="Left" Height="25" Margin="108,342,0,0" VerticalAlignment="Top" Width="308" FontFamily="Times New Roman" FontSize="14"/>
-        <CheckBox x:Name="chkNgayMat" Content="Chưa rõ" HorizontalAlignment="Left" Height="25" Margin="441,342,0,0" VerticalAlignment="Top" Width="85" FontFamily="Times New Roman" FontSize="14" Checked="chkNgayMat_Checked" Unchecked="chkNgayMat_Unchecked"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="184" TextAlignment="Center" FontSize="20" FontFamily="Times New Roman" Foreground="Black" FontWeight="Bold" Text="SỬA TÁC GIẢ"/>
 
-        <Button x:Name="btChon" Content="Chọn" HorizontalAlignment="Left" Height="25" 
-                Margin="10,379,0,0" VerticalAlignment="Top" Width="70" FontFamily="Times New Roman"
-                FontSize="15" Click="btChon_Click">
-            <Button.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="15"/>
-                </Style>
-            </Button.Resources>
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <LinearGradientBrush.RelativeTransform>
-                        <TransformGroup>
-                            <ScaleTransform CenterY="0.5" CenterX="0.5"/>
-                            <SkewTransform CenterX="0.5" CenterY="0.5"/>
-                            <RotateTransform Angle="-64.983" CenterX="0.5" CenterY="0.5"/>
-                            <TranslateTransform/>
-                        </TransformGroup>
-                    </LinearGradientBrush.RelativeTransform>
-                    <GradientStop Color="#FFE1DCFA"/>
-                    <GradientStop Color="#FFE7F6FD" Offset="5"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-
-        <Button x:Name="btLuu" Content="Lưu" HorizontalAlignment="Left" Height="25" 
-                Margin="461,379,0,0" VerticalAlignment="Top" Width="65" FontFamily="Times New Roman" 
-                FontSize="14" Click="btLuu_Click">
-
-            <Button.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="15"/>
-                </Style>
-            </Button.Resources>
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <LinearGradientBrush.RelativeTransform>
-                        <TransformGroup>
-                            <ScaleTransform CenterY="0.5" CenterX="0.5"/>
-                            <SkewTransform CenterX="0.5" CenterY="0.5"/>
-                            <RotateTransform Angle="-64.983" CenterX="0.5" CenterY="0.5"/>
-                            <TranslateTransform/>
-                        </TransformGroup>
-                    </LinearGradientBrush.RelativeTransform>
-                    <GradientStop Color="#FFE1DCFA"/>
-                    <GradientStop Color="#FFE7F6FD" Offset="5"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-        <ListView x:Name="dgvTacGia" HorizontalAlignment="Left" Height="170" Margin="10,10,0,0" VerticalAlignment="Top" Width="516" SelectionChanged="dgvTacGia_SelectionChanged">
+        <ListView x:Name="dgvTacGia" HorizontalAlignment="Left" Height="170" Margin="17,70,0,0" VerticalAlignment="Top" Width="Auto" SelectionChanged="dgvTacGia_SelectionChanged">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="MÃ TÁC GIẢ" DisplayMemberBinding="{Binding MATG}" Width="90"/>
-                    <GridViewColumn Header="TÊN TÁC GIẢ" DisplayMemberBinding="{Binding TENTG}" Width="120"/>
-                    <GridViewColumn Header="NĂM SINH" DisplayMemberBinding="{Binding NAMSINH}" Width="90"/>
-                    <GridViewColumn Header="NĂM MẤT" DisplayMemberBinding="{Binding NAMMAT}" Width="90"/>
+                    <GridViewColumn Header="TÊN TÁC GIẢ" DisplayMemberBinding="{Binding TENTG}" Width="150"/>
+                    <GridViewColumn Header="NĂM SINH" DisplayMemberBinding="{Binding NAMSINH}" Width="150"/>
+                    <GridViewColumn Header="NĂM MẤT" DisplayMemberBinding="{Binding NAMMAT}" Width="150"/>
                     <GridViewColumn Header="QUÊ QUÁN" DisplayMemberBinding="{Binding QUEQUAN}" Width="120"/>
 
                 </GridView>
             </ListView.View>
         </ListView>
+
+        <Label Content="Mã tác giả:" HorizontalAlignment="Left" Height="25" Margin="17,251,0,0" VerticalAlignment="Top" Width="83" FontFamily="Times New Roman" FontSize="16"/>
+        <TextBox x:Name="txtMaTacGia" HorizontalAlignment="Left" Height="25" Margin="115,251,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="452"/>
+
+        <Label Content="Tên tác giả:" HorizontalAlignment="Left" Height="25" Margin="17,291,0,0" VerticalAlignment="Top" Width="83" FontFamily="Times New Roman" FontSize="16"/>
+        <TextBox x:Name="txtTenTacGia" HorizontalAlignment="Left" Height="25" Margin="115,291,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="452"/>
+
+        <Label Content="Quê quán:" HorizontalAlignment="Left" Height="25" Margin="17,328,0,0" VerticalAlignment="Top" Width="83" FontFamily="Times New Roman" FontSize="16"/>
+        <TextBox x:Name="txtQueQuan" HorizontalAlignment="Left" Height="25" Margin="115,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="452"/>
+
+        <Label Content="Ngày sinh:" HorizontalAlignment="Left" Height="25" Margin="16,368,0,0" VerticalAlignment="Top" Width="85" FontFamily="Times New Roman" FontSize="16"/>
+        <DatePicker x:Name="DatePickerNgaySinh" HorizontalAlignment="Left" Height="25" Margin="115,370,0,0" VerticalAlignment="Top" Width="308" FontFamily="Times New Roman" FontSize="16" SelectedDateFormat="Short">
+            <DatePicker.Resources>
+                <Style TargetType="DatePickerTextBox">
+                    <Setter Property="Control.Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type DatePickerTextBox}">
+                                <Grid>
+                                    <Border x:Name="TextBoxBorder" BorderThickness="0" Background="{TemplateBinding Background}" Padding="2">
+                                        <Grid>
+                                            <TextBox x:Name="PART_TextBox"
+                                             Text="{Binding Path=SelectedDate, RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}, StringFormat='dd/MM/yyyy', Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                             Background="Transparent"
+                                             BorderThickness="0"
+                                             Foreground="{TemplateBinding Foreground}"
+                                             HorizontalContentAlignment="Center"
+                                             VerticalContentAlignment="Center"
+                                             IsReadOnly="True"/>
+                                            <TextBlock x:Name="Watermark" Text="Chưa xác định" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="2,0" Visibility="Collapsed"/>
+                                        </Grid>
+                                    </Border>
+                                </Grid>
+                                <ControlTemplate.Triggers>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=chkNgaySinh}" Value="True">
+                                        <Setter TargetName="PART_TextBox" Property="Visibility" Value="Collapsed"/>
+                                        <Setter TargetName="Watermark" Property="Visibility" Value="Visible"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=chkNgaySinh}" Value="False">
+                                        <Setter TargetName="PART_TextBox" Property="Visibility" Value="Visible"/>
+                                        <Setter TargetName="Watermark" Property="Visibility" Value="Collapsed"/>
+                                    </DataTrigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DatePicker.Resources>
+        </DatePicker>
+
+        <CheckBox x:Name="chkNgaySinh" Content="Chưa xác định" HorizontalAlignment="Left" Height="25" Margin="448,368,0,0" VerticalAlignment="Top" Width="119" FontFamily="Times New Roman" FontSize="16" Checked="chkNgaySinh_Checked" Unchecked="chkNgaySinh_Unchecked"/>
+
+        <Label Content="Ngày mất:" HorizontalAlignment="Left" Height="25" Margin="16,407,0,0" VerticalAlignment="Top" Width="85" FontFamily="Times New Roman" FontSize="16"/>
+        <DatePicker x:Name="DatePickerNgayMat" HorizontalAlignment="Left" Height="25" Margin="115,407,0,0" VerticalAlignment="Top" Width="308" FontFamily="Times New Roman" FontSize="16" SelectedDateFormat="Short">
+            <DatePicker.Resources>
+                <Style TargetType="DatePickerTextBox">
+                    <Setter Property="Control.Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type DatePickerTextBox}">
+                                <Grid>
+                                    <Border x:Name="TextBoxBorder" BorderThickness="0" Background="{TemplateBinding Background}" Padding="2">
+                                        <Grid>
+                                            <TextBox x:Name="PART_TextBox"
+                                             Text="{Binding Path=SelectedDate, RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}, StringFormat='dd/MM/yyyy', Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                             Background="Transparent"
+                                             BorderThickness="0"
+                                             Foreground="{TemplateBinding Foreground}"
+                                             HorizontalContentAlignment="Center"
+                                             VerticalContentAlignment="Center"
+                                             IsReadOnly="True"/>
+                                            <TextBlock x:Name="Watermark" Text="Chưa xác định" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="2,0" Visibility="Collapsed"/>
+                                        </Grid>
+                                    </Border>
+                                </Grid>
+                                <ControlTemplate.Triggers>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=chkNgayMat}" Value="True">
+                                        <Setter TargetName="PART_TextBox" Property="Visibility" Value="Collapsed"/>
+                                        <Setter TargetName="Watermark" Property="Visibility" Value="Visible"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=chkNgayMat}" Value="False">
+                                        <Setter TargetName="PART_TextBox" Property="Visibility" Value="Visible"/>
+                                        <Setter TargetName="Watermark" Property="Visibility" Value="Collapsed"/>
+                                    </DataTrigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DatePicker.Resources>
+        </DatePicker>
+
+
+
+
+        <CheckBox x:Name="chkNgayMat" Content="Chưa xác định" HorizontalAlignment="Left" Height="25" Margin="448,407,0,0" VerticalAlignment="Top" Width="119" FontFamily="Times New Roman" FontSize="16" Checked="chkNgayMat_Checked" Unchecked="chkNgayMat_Unchecked"/>
+
+        <Button  x:Name="btChon" Content="Chọn tác giả" HorizontalAlignment="Left" Margin="17,457,0,0" VerticalAlignment="Top" Width="84" Height="26" Click="btChon_Click" RenderTransformOrigin="0.5,0.5">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="0"/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+
+        <Button  x:Name="btLuu" Content="Lưu thay đổi" HorizontalAlignment="Left" Margin="465,457,0,0" VerticalAlignment="Top" Width="84" Height="26" Click="btLuu_Click" RenderTransformOrigin="0.5,0.5">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="0"/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+        <Label  Content="Danh sách các tác giả: " HorizontalAlignment="Left" Height="35" Margin="16,35,0,0" VerticalAlignment="Top" Width="216" FontSize="17" FontFamily="Times New Roman"/>
+
+
 
     </Grid>
 </Window>
