--- a/Book Management/HoaDon.xaml
+++ b/Book Management/HoaDon.xaml
@@ -8,8 +8,14 @@
         mc:Ignorable="d"
         Background="#FFAEEFB2"
         Title="Hóa Đơn" Height="528" Width="500" WindowStartupLocation="CenterScreen" FontSize="14" FontFamily="Times New Roman">
-    <Grid>
-        <ListView x:Name="lvHoaDon" HorizontalAlignment="Left" Height="354" Margin="10,59,0,0" VerticalAlignment="Top" Width="462" FontFamily="Times New Roman" FontSize="14" SelectionChanged="lvHoaDon_SelectionChanged">
+    <Grid Background="#FFEEE1BA">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="12*"/>
+            <ColumnDefinition Width="12*"/>
+            <ColumnDefinition Width="209*"/>
+            <ColumnDefinition Width="17*"/>
+        </Grid.ColumnDefinitions>
+        <ListView x:Name="lvHoaDon" HorizontalAlignment="Left" Height="354" Margin="10,59,0,0" VerticalAlignment="Top" Width="462" FontFamily="Times New Roman" FontSize="14" SelectionChanged="lvHoaDon_SelectionChanged" Grid.ColumnSpan="4">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Mã Đơn" Width="100"/>
@@ -18,8 +24,8 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Label Content="Tìm kiếm" HorizontalAlignment="Left" Height="26" Margin="20,10,0,0" VerticalAlignment="Top" Width="84" FontFamily="Times New Roman" FontSize="14"/>
-        <TextBox x:Name="txtSearch" HorizontalAlignment="Left" Height="26" Margin="99,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="284" FontFamily="Times New Roman" FontSize="14" TextChanged="txtSearch_TextChanged">
+        <Label Content="Tìm kiếm" HorizontalAlignment="Left" Height="26" Margin="20,10,0,0" VerticalAlignment="Top" Width="84" FontFamily="Times New Roman" FontSize="14" Grid.ColumnSpan="3"/>
+        <TextBox x:Name="txtSearch" HorizontalAlignment="Left" Height="26" Margin="51,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="284" FontFamily="Times New Roman" FontSize="14" TextChanged="txtSearch_TextChanged" Grid.Column="2">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="10"/>
@@ -27,8 +33,8 @@
             </TextBox.Resources>
         </TextBox>
         <Button x:Name="btChiTiet" Content="Chi tiết" HorizontalAlignment="Left" Height="26" 
-            Margin="262,444,0,0" VerticalAlignment="Top" Width="100" FontFamily="Times New Roman" 
-            FontSize="14" RenderTransformOrigin="1.928,1.127" Click="btChiTiet_Click">
+            Margin="214,444,0,0" VerticalAlignment="Top" Width="100" FontFamily="Times New Roman" 
+            FontSize="14" RenderTransformOrigin="1.928,1.127" Click="btChiTiet_Click" Grid.Column="2">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
@@ -51,7 +57,7 @@
         </Button>
         <Button x:Name="btThem" Content="Thêm hóa đơn" HorizontalAlignment="Left" Height="26" 
             Margin="10,444,0,0" VerticalAlignment="Top" Width="104" FontFamily="Times New Roman" 
-            FontSize="14" Click="btThem_Click" >
+            FontSize="14" Click="btThem_Click" Grid.ColumnSpan="3" >
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
@@ -73,8 +79,8 @@
             </Button.Background>
         </Button>
         <Button x:Name="btBack" Content="Trở lại" HorizontalAlignment="Left" Height="26" 
-            Margin="384,444,0,0" VerticalAlignment="Top" Width="90" FontFamily="Times New Roman" 
-            FontSize="14" RenderTransformOrigin="1.928,1.127" Click="btBack_Click" >
+            Margin="336,444,0,0" VerticalAlignment="Top" Width="90" FontFamily="Times New Roman" 
+            FontSize="14" RenderTransformOrigin="1.928,1.127" Click="btBack_Click" Grid.Column="2" Grid.ColumnSpan="2" >
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
@@ -96,8 +102,8 @@
             </Button.Background>
         </Button>
         <Button x:Name="btXoa" Content="Xóa hóa đơn" HorizontalAlignment="Left" Height="26" 
-            Margin="135,444,0,0" VerticalAlignment="Top" Width="106" FontFamily="Times New Roman" 
-            FontSize="14" RenderTransformOrigin="1.928,1.127" Click="btXoa_Click" >
+            Margin="87,444,0,0" VerticalAlignment="Top" Width="106" FontFamily="Times New Roman" 
+            FontSize="14" RenderTransformOrigin="1.928,1.127" Click="btXoa_Click" Grid.Column="2" >
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
@@ -118,7 +124,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="Refresh" HorizontalAlignment="Left" VerticalAlignment="Top" Width="70" Height="26" Click="Button_Click" Margin="397,10,0,0">
+        <Button Content="Refresh" HorizontalAlignment="Left" VerticalAlignment="Top" Width="70" Height="26" Click="Button_Click" Margin="349,10,0,0" Grid.Column="2" Grid.ColumnSpan="2">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
