điều chỉnh khách thuê

--- a/Book Management/ChiTietHoaDon.xaml
+++ b/Book Management/ChiTietHoaDon.xaml
@@ -7,20 +7,25 @@
         xmlns:syncfusion="http://schemas.syncfusion.com/wpf" x:Class="Book_Management.ChiTietHoaDon"
         mc:Ignorable="d"
         Background="#FFEEE1BA"
-        Title="Chi Tiết Hóa Đơn" Height="600" Width="650" WindowStartupLocation="CenterScreen">
-    <Grid  Margin="10,0,-9,0" Background="#FFEEE1BA">
+        Title="Chi Tiết Hóa Đơn Cho Thuê" Height="584" Width="673" WindowStartupLocation="CenterScreen">
+    <Grid  Margin="0,0,0,12" Background="#FFEEE1BA">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="498*"/>
+            <ColumnDefinition Width="143*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="271*"/>
-            <RowDefinition Height="55*"/>
-            <RowDefinition Height="129*"/>
-            <RowDefinition Height="129*"/>
+            <RowDefinition Height="266*"/>
+            <RowDefinition Height="54*"/>
+            <RowDefinition Height="127*"/>
+            <RowDefinition Height="98*"/>
+            <RowDefinition Height="29*"/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="txtMaDon" HorizontalAlignment="Left" Margin="118,12,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="92" Height="25" IsEnabled="False"/>
+        <TextBox x:Name="txtMaDon" HorizontalAlignment="Left" Margin="129,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="92" Height="25" IsEnabled="False"/>
         <Label Content="Mã Hóa Đơn:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="24" Width="94" FontFamily="Times New Roman" FontSize="14"/>
         <TextBox x:Name="txtTenKhachHang" HorizontalAlignment="Left" Margin="129,50,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" Height="25"/>
-        <Label Content="Tên Khách Hàng:" HorizontalAlignment="Left" Margin="6,50,0,0" VerticalAlignment="Top" Height="31" Width="118" FontFamily="Times New Roman" FontSize="14"/>
-        <Button x:Name="btCapNhat" Content="Cập nhật" HorizontalAlignment="Left" Margin="502,24,0,0" VerticalAlignment="Top" Width="80" 
-                RenderTransformOrigin="-0.167,0.303" Click="btCapNhat_Click" Height="25" FontFamily="Times New Roman" FontSize="14" Grid.Row="1" >
+        <Label Content="Tên Khách Thuê:" HorizontalAlignment="Left" Margin="6,50,0,0" VerticalAlignment="Top" Height="31" Width="118" FontFamily="Times New Roman" FontSize="14"/>
+        <Button x:Name="btCapNhat" Content="Cập nhật" HorizontalAlignment="Left" Margin="504,47,0,0" VerticalAlignment="Top" Width="80" 
+                RenderTransformOrigin="-0.167,0.303" Click="btCapNhat_Click" Height="25" FontFamily="Times New Roman" FontSize="14" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2" >
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
@@ -41,8 +46,8 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="btBack" Content="Trở lại" HorizontalAlignment="Left" Margin="31,82,0,0" VerticalAlignment="Top" 
-                Width="109" Click="btBack_Click" RenderTransformOrigin="0.655,-1.251" Height="30" FontFamily="Times New Roman" FontSize="14" Grid.Row="3" >
+        <Button x:Name="btBack" Content="Trở lại" HorizontalAlignment="Left" Margin="37,83,0,0" VerticalAlignment="Top" 
+                Width="109" Click="btBack_Click" RenderTransformOrigin="0.655,-1.251" Height="30" FontFamily="Times New Roman" FontSize="14" Grid.Row="3" Grid.RowSpan="2" >
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
@@ -63,7 +68,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <ListView x:Name="lvChiTiet" Margin="13,89,30,32" SelectionChanged="lvChiTiet_SelectionChanged">
+        <ListView x:Name="lvChiTiet" Margin="12,89,19,32" SelectionChanged="lvChiTiet_SelectionChanged" Grid.ColumnSpan="2">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Mã Sách" DisplayMemberBinding="{Binding MASACH}" Width="90"/>
@@ -74,8 +79,8 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="btHoanTat" Content="Hoàn tất" HorizontalAlignment="Left" Margin="502,81,0,0" VerticalAlignment="Top" 
-                Width="128" Click="btHoanTat_Click" Height="31" FontFamily="Times New Roman" FontSize="14" Grid.Row="3" >
+        <Button x:Name="btHoanTat" Content="Hoàn tất" HorizontalAlignment="Left" Margin="487,75,0,0" VerticalAlignment="Top" 
+                Width="128" Click="btHoanTat_Click" Height="31" FontFamily="Times New Roman" FontSize="14" Grid.Row="3" Grid.ColumnSpan="2" Grid.RowSpan="2" >
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
@@ -118,7 +123,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="btThemSach" Content="Thêm Sách" HorizontalAlignment="Left" Margin="50,255,0,0" Height="25" 
+        <Button x:Name="btThemSach" Content="Thêm Sách" HorizontalAlignment="Left" Margin="37,255,0,0" Height="25" 
                 VerticalAlignment="Top" Width="90" Click="btThemSach_Click" FontFamily="Times New Roman" FontSize="14" Grid.RowSpan="2" >
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
@@ -162,8 +167,8 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="btHuyThem" Content="Hủy Thêm" HorizontalAlignment="Left" Margin="373,12,0,0" VerticalAlignment="Top" 
-                Width="90" Height="25" Click="btHuyThem_Click" FontFamily="Times New Roman" FontSize="14" Grid.Row="2">
+        <Button x:Name="btHuyThem" Content="Hủy Thêm" HorizontalAlignment="Left" Margin="281,12,0,0" VerticalAlignment="Top" 
+                Width="127" Height="25" Click="btHuyThem_Click" FontFamily="Times New Roman" FontSize="14" Grid.Row="2" RenderTransformOrigin="0.213,0.842">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
@@ -184,7 +189,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <ListView x:Name="lvChonSach" Margin="81,47,150,58" SelectionChanged="lvChonSach_SelectionChanged" Grid.RowSpan="2" Grid.Row="2">
+        <ListView x:Name="lvChonSach" Margin="37,47,58,35" SelectionChanged="lvChonSach_SelectionChanged" Grid.RowSpan="2" Grid.Row="2" Grid.ColumnSpan="2">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Mã Sách" DisplayMemberBinding="{Binding MASACH}" Width="130"/>
@@ -194,10 +199,10 @@
             </ListView.View>
         </ListView>
         <Label Content="Số lượng" HorizontalAlignment="Left" Height="26" Margin="420,254,0,0" VerticalAlignment="Top" Width="63" FontFamily="Times New Roman" FontSize="14" RenderTransformOrigin="0.524,0.117" Grid.RowSpan="2"/>
-        <syncfusion:UpDown x:Name="UpDownSoLuong" HorizontalAlignment="Left" Height="26" Margin="493,255,0,0" NullValueText="Enter your weight:" UseNullOption="True" Value="1" VerticalAlignment="Top" Width="91" RenderTransformOrigin="0.286,0.463" Grid.RowSpan="2"/>
-        <TextBox x:Name="txtThoiGian" HorizontalAlignment="Left" Margin="507,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Height="25" IsEnabled="False"/>
-        <Label Content="Thời Gian:" HorizontalAlignment="Left" Margin="424,12,0,0" VerticalAlignment="Top" Height="29" Width="78" FontFamily="Times New Roman" FontSize="14"/>
-        <Button Content="Refresh" HorizontalAlignment="Left" Margin="551,48,0,0" VerticalAlignment="Top" Height="26" Width="70" Click="Button_Click" FontFamily="Times New Roman" FontSize="14">
+        <syncfusion:UpDown x:Name="UpDownSoLuong" HorizontalAlignment="Left" Height="26" Margin="493,255,0,0" NullValueText="Enter your weight:" UseNullOption="True" Value="1" VerticalAlignment="Top" Width="91" RenderTransformOrigin="0.286,0.463" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="txtThoiGian" HorizontalAlignment="Center" Margin="0,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Height="25" IsEnabled="False" Grid.Column="1"/>
+        <Label Content="Thời Gian:" HorizontalAlignment="Left" Margin="435,14,0,0" VerticalAlignment="Top" Height="29" Width="78" FontFamily="Times New Roman" FontSize="14"/>
+        <Button Content="Refresh" HorizontalAlignment="Left" Margin="61,48,0,0" VerticalAlignment="Top" Height="26" Width="70" Click="Button_Click" FontFamily="Times New Roman" FontSize="14" Grid.Column="1">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
