--- a/Book Management/ViewTongQuanLyNhaSach.xaml
+++ b/Book Management/ViewTongQuanLyNhaSach.xaml
@@ -18,7 +18,7 @@
                     <GridViewColumn Header="TÁC GIẢ" DisplayMemberBinding="{Binding TENTG}" Width="200"/>
                     <GridViewColumn Header="LĨNH VỰC" DisplayMemberBinding="{Binding TENLINHVUC}" Width="150"/>
                     <GridViewColumn Header="LOẠI SÁCH" DisplayMemberBinding="{Binding TENLOAISACH}" Width="150"/>
-                    <GridViewColumn Header="GIÁ BÌA" DisplayMemberBinding="{Binding GIABIA}" Width="80"/>
+                    <!--<GridViewColumn Header="GIÁ BÌA" DisplayMemberBinding="{Binding GIABIA}" Width="80"/>-->
                     <GridViewColumn Header="LẦN TB" DisplayMemberBinding="{Binding LANTAIBAN}" Width="80"/>
                     <GridViewColumn Header="TÊN NXB" DisplayMemberBinding="{Binding TENNHAXUATBAN}" Width="160"/>
                     <GridViewColumn Header="NĂM XB" DisplayMemberBinding="{Binding NAMXUATBAN}" Width="150"/>
@@ -116,21 +116,21 @@
                     <Image Source="/Hinhanh/2069719.png" />
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem x:Name="MenuThongKe" Header="Thống kê" FontFamily="Times New Roman" FontSize="16" Click="MenuThongKe_Click" Width="95">
+            <MenuItem x:Name="MenuThongKe" Header="Thống kê" FontFamily="Times New Roman" FontSize="16" Click="MenuThongKe_Click" Width="1" Visibility="Hidden">
                 <MenuItem.Icon>
                     <Image Source="/Hinhanh/statistics-icon.png" />
                 </MenuItem.Icon>
             </MenuItem>
-            <Button Content="Refresh" Height="26" Width="59" Click="Button_Click" BorderBrush="#FF702222" Foreground="#FF701515" Background="#FFEEE1BA"/>
+            <Button Content="Refresh" Height="26" Width="58" Click="Button_Click" BorderBrush="#FF702222" Foreground="#FF701515" Background="#FFEEE1BA"/>
         </Menu>
         <Label Content="Người dùng:" HorizontalAlignment="Left" Height="26" Margin="1045,22,0,0" VerticalAlignment="Top" Width="88" FontSize="14" FontWeight="Bold"/>
         <TextBox x:Name="txtTenNguoiDung" HorizontalAlignment="Left" Height="20" Margin="1154,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="86" FontSize="14" Background="{x:Null}" FontWeight="Bold"/>
 
-        <Label Content="Doanh thu trong ngày:" HorizontalAlignment="Left" Height="26" Margin="10,330,0,0" VerticalAlignment="Top" Width="160" FontSize="14" FontWeight="Bold"/>
-        <TextBox x:Name="txtDoanhThu" HorizontalAlignment="Left" Height="26" Margin="175,330,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" FontSize="14" Background="{x:Null}" FontWeight="Bold"/>
-        <Label Content="Số lượng khách:" Grid.ColumnSpan="5" HorizontalAlignment="Left" Height="26" Margin="10,375,0,0" VerticalAlignment="Top" Width="140" FontSize="14" FontWeight="Bold"/>
-        <TextBox x:Name="txtSLKhach" HorizontalAlignment="Left" Height="26" Margin="175,375,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" FontSize="14" Background="{x:Null}" FontWeight="Bold" TextChanged="txtSLKhach_TextChanged"/>
-        <Label x:Name="lblTime" Content="Thứ xxxx, ngày yy, tháng zz, năm tttt" HorizontalAlignment="Left" Height="26" Margin="984,370,0,0" VerticalAlignment="Top" Width="239" FontSize="14" FontWeight="Bold"/>
+        <Label Content="Doanh thu trong ngày:" HorizontalAlignment="Left" Height="26" Margin="10,330,0,0" VerticalAlignment="Top" Width="160" FontSize="14" FontWeight="Bold" Visibility="Hidden"/>
+        <TextBox x:Name="txtDoanhThu" HorizontalAlignment="Left" Height="26" Margin="175,330,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" FontSize="14" Background="{x:Null}" FontWeight="Bold" Visibility="Hidden"/>
+        <Label Content="Số lượng khách:" Grid.ColumnSpan="5" HorizontalAlignment="Left" Height="26" Margin="10,375,0,0" VerticalAlignment="Top" Width="140" FontSize="14" FontWeight="Bold" Visibility="Hidden"/>
+        <TextBox x:Name="txtSLKhach" HorizontalAlignment="Left" Height="26" Margin="175,375,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" FontSize="14" Background="{x:Null}" FontWeight="Bold" TextChanged="txtSLKhach_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="lblTime" Content="Thứ xxxx, ngày yy, tháng zz, năm tttt" HorizontalAlignment="Left" Height="26" Margin="984,370,0,0" VerticalAlignment="Top" Width="239" FontSize="14" FontWeight="Bold" />
 
     </Grid>
 </Window>
